# rikitikitavi

./: .gitignore  .prek.toml  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/rikitikitavi/: Cargo.toml
crates/rikitikitavi-analysis/: Cargo.toml
crates/rikitikitavi-analysis/src/: attack_paths.rs  comparison.rs  exploit_intel.rs  history.rs  kev_db.rs  lib.rs  priority_actions.rs  risk_score.rs
crates/rikitikitavi-core/: Cargo.toml
crates/rikitikitavi-core/src/: error.rs  lib.rs  types.rs
crates/rikitikitavi-export/: Cargo.toml
crates/rikitikitavi-export/src/: attack_report.rs  csv.rs  html.rs  json.rs  lib.rs  parquet.rs  security_lake.rs
crates/rikitikitavi-models/: Cargo.toml
crates/rikitikitavi-models/src/: attack_path.rs  config.rs  device.rs  finding.rs  lib.rs  mac.rs  ocsf.rs  priority_action.rs
crates/rikitikitavi-network/: Cargo.toml
crates/rikitikitavi-network/src/: arp.rs  epss.rs  external.rs  interfaces.rs  lib.rs  mdns.rs  sweep.rs  wifi.rs  wifi_frames.rs  wifi_monitor.rs
crates/rikitikitavi-scanners/: Cargo.toml
crates/rikitikitavi-scanners/proptest-regressions/: credentials.txt
crates/rikitikitavi-scanners/src/: arp.rs  credentials.rs  database.rs  device.rs  dhcp.rs  dns.rs  exposure.rs  http_audit.rs  http_util.rs  isolation.rs  lib.rs  mdns.rs  mgmt_plane.rs  mqtt.rs  neighbor.rs  network.rs  oui_db.rs  passive_wifi.rs  ports.rs  printers.rs  remediation.rs  router.rs  rtsp.rs  services.rs  smb.rs  snmp.rs  ssl.rs  tr069.rs  traits.rs  upnp_igd.rs  wifi.rs
crates/rikitikitavi-scanners/templates/: arp.yaml  credentials.yaml  database.yaml  dhcp.yaml  dns.yaml  exposure.yaml  http_audit.yaml  isolation.yaml  ports.yaml  router.yaml  services.yaml  smb.yaml  ssl.yaml  wifi.yaml
crates/rikitikitavi-tui/: Cargo.toml
crates/rikitikitavi-tui/src/: app.rs  events.rs  lib.rs  theme.rs  ui.rs
crates/rikitikitavi-tui/src/widgets/: attack_paths.rs  dashboard.rs  devices.rs  findings.rs  mod.rs  network_map.rs  scan_progress.rs  top_actions.rs
crates/rikitikitavi-unifi/: Cargo.toml
crates/rikitikitavi-unifi/src/: api.rs  deployment.rs  lib.rs  local.rs  models.rs  persist.rs  scanner.rs
crates/rikitikitavi/src/: cli.rs  config.rs  main.rs  runner.rs
docs/: RUST_PATTERNS.md
docs/learning/: 01-project-structure.rs  02-error-handling.rs  03-traits-and-async.rs  04-ownership-and-borrowing.rs  05-enums-and-pattern-matching.rs  06-serde-and-derive.rs  07-clap-cli.rs  08-hashing-and-fingerprints.rs  09-custom-serde.rs  10-cfg-and-feature-flags.rs
scripts/: gen_kev_db.py  gen_oui_db.py
