[workspace]
resolver = "2"
members = [
    "crates/rikitikitavi",
    "crates/rikitikitavi-core",
    "crates/rikitikitavi-scanners",
    "crates/rikitikitavi-network",
    "crates/rikitikitavi-models",
    "crates/rikitikitavi-analysis",
    "crates/rikitikitavi-export",
    "crates/rikitikitavi-tui",
    "crates/rikitikitavi-unifi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/lexicone42/rikitikitavi"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Networking
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
hickory-resolver = "0.24"

# AWS
aws-config = "1"
aws-sdk-s3 = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"
base64 = "0.22"

# Testing
mockall = "0.13"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
future_not_send = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.release-fast]
inherits = "release"
opt-level = 3

[profile.release-embedded]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
strip = true
codegen-units = 1

[profile.release-unifi]
inherits = "release"
opt-level = "s"
lto = true
strip = true
