[package]
name = "rikitikitavi-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rikitikitavi-core = { path = "../rikitikitavi-core" }
rikitikitavi-models = { path = "../rikitikitavi-models" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3"

[lints]
workspace = true
