[package]
name = "rikitikitavi-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rikitikitavi-core = { path = "../rikitikitavi-core" }
rikitikitavi-models = { path = "../rikitikitavi-models" }
rikitikitavi-analysis = { path = "../rikitikitavi-analysis" }

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3"

[lints]
workspace = true
