[package]
name = "rikitikitavi-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rikitikitavi-core = { path = "../rikitikitavi-core" }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
ipnetwork.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_yaml_ng.workspace = true

[lints]
workspace = true
