[package]
name = "rikitikitavi-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rikitikitavi-core = { path = "../rikitikitavi-core" }
rikitikitavi-models = { path = "../rikitikitavi-models" }

tokio.workspace = true
serde.workspace = true
tracing.workspace = true
anyhow.workspace = true
ipnetwork.workspace = true
reqwest.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
