[package]
name = "rikitikitavi-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rikitikitavi-core = { path = "../rikitikitavi-core" }
rikitikitavi-models = { path = "../rikitikitavi-models" }
rikitikitavi-scanners = { path = "../rikitikitavi-scanners" }
rikitikitavi-export = { path = "../rikitikitavi-export" }
rikitikitavi-analysis = { path = "../rikitikitavi-analysis" }

ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
