[package]
name = "rikitikitavi-unifi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["local-api"]
local-api = []
remote-api = []

[dependencies]
rikitikitavi-core = { path = "../rikitikitavi-core" }
rikitikitavi-models = { path = "../rikitikitavi-models" }
rikitikitavi-scanners = { path = "../rikitikitavi-scanners" }

async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
chrono.workspace = true
uuid.workspace = true

[lints]
workspace = true
